Revert "Fix FlexLayout in dark mode (#9249)" (#9260)
This reverts commit 2a079100015d26a9d06989b811c5cb08bd49fe39.

### URL of deployed dev instance (used for testing):
- https://___.webknossos.xyz

### Steps to test:
- abc

### TODOs:
- [ ] ...

### Issues:
- fixes #

------
(Please delete unneeded items, merge only when none are left open)
- [ ] Added changelog entry (create a `$PR_NUMBER.md` file in
`unreleased_changes` or use `./tools/create-changelog-entry.py`)
- [ ] Added migration guide entry if applicable (edit the same file as
for the changelog)
- [ ] Updated [documentation](../blob/master/docs) if applicable
- [ ] Adapted [wk-libs python
client](https://github.com/scalableminds/webknossos-libs/tree/master/webknossos/webknossos/client)
if relevant API parts change
- [ ] Removed dev-only changes like prints and application.conf edits
- [ ] Considered [common edge
cases](../blob/master/.github/common_edge_cases.md)
- [ ] Needs datastore update after deployment

--- a/frontend/stylesheets/dark.less
+++ b/frontend/stylesheets/dark.less
@@ -133,9 +133,4 @@
   .anticon.anticon-close.ant-tag-close-icon {
     color: black;
   }
-
-  // Flexlayout has default white background color which shines through in dark mode
-  .flexlayout__layout {
-    background-color: black;
-  }
 }
